# syn-retro-public

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
scripts/: install_precommit.sh
src/syn_retro/: __init__.py  main.py  path.py  prepare_bb_db.py  prod.py  syn_types.py  utils.py
tests/: conftest.py  test_prepare_bb_db.py  test_run_retro.py  test_utils.py
tests/resources/: test_bad_bb.csv  test_bb.csv  test_rxn_smarts.yaml  test_sub_smarts.yaml
